--- a/proposta2/css/etapa2final.css
+++ b/proposta2/css/etapa2final.css
@@ -186,3 +186,46 @@ position: fixed;
 #FCPX{
     margin-bottom: 200px;
 }
+
+
+
+.sideMenu{
+    position: fixed;
+    font-family: 'Raleway', sans-serif;
+    font-size:15px;
+    text-transform: uppercase;
+    line-height: 25px;
+    font-weight: 100;
+    top: 50px;   
+}
+
+.menuProposta{
+    opacity: 30%;
+    padding: 0px 10px;
+    list-style-type: none;
+}
+
+.menuProposta:hover{
+    opacity: 100%;
+    background-color: white;
+    font-weight:600;
+}
+
+#picked{
+    text-align: center;
+    color:white;
+    list-style-type: none;
+}
+
+a:link{
+    color:white;
+}
+a:visited{
+    color:white;
+}
+a:hover{
+    color:black;
+}
+a{
+    text-decoration: none;
+}
